[tool.poetry]
name = "find-unblocked-orphans"
version = "0.1.0"
description = ""
authors = ["Fredrik Svärd <fredrik.svard@svenskaspel.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
koji = "^1.33.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
